fix(header): Adjust header gap size fot tablet size

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -62,7 +62,7 @@
     flex-direction: column;
     align-items: center;
     flex-grow: 1;
-    gap: clamp(1rem, 4vw, 50px);
+    gap: clamp(1rem, 3vw, 50px);
     font-size: 2rem;
 
     @include mq.max767px {
